@@ -30,6 +30,7 @@
 * Adyen: Add MIT flagging for Network Tokens [aenand] #4905
 * Moneris: Update sca actions [almalee24] #4902
 * Ogone: Add gateway specific 3ds option with default options mapping [jherreraa] #4894
+* Rapyd: Add recurrence_type field [yunnydang] #4912
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
